# Time2Change

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.frontend  README.md  build.rs  cargo.toml  clippy.toml  deny.toml  docker-compose.yml  rustfmt.toml
.config/: nextest.toml
.github/: CODEOWNERS  CONTRIBUTING.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  labeler.yml  stale.yml
.sqlx/: query-19f3df00063cd3f737cabed1d1fc6373d84d5086fed1a89f7c0e500a3cbc01b9.json  query-1a454abb8e71815c81e9538a5f1bddc0231551caf9c84d6230d2d9694e7708ce.json  query-a5762498fd977e8528c57bc2cf019f9ea454b254f0d7176ad85dc6dc892fd5d6.json  query-d7732805c1c201db915714eb0aa918a3294eb1759bc12918db567d6167516361.json  query-ed3c14fbd3ca938c00cc63b2a1537e0a25b7d0018a3fc66b0e775ab5eb4294a2.json  query-f663dcec9598375250155aea246a9f3ecae9585763850832f3c58eaf734228ff.json
crates/api/: Cargo.toml
crates/api/src/: config.rs  dto.rs  errors.rs  main.rs  routes.rs  state.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/application/src/dtos/: structs.rs
crates/application/src/ports/: currency_repository.rs  exchange_rate_repository.rs  mod.rs  rate_provider.rs  repository_errors.rs
crates/application/src/responses/: analyze_pair_responses.rs  mod.rs
crates/application/src/tests/: analyze_pair_tests.rs  helpers.rs  ingest_rates_tests.rs  mod.rs  sync_currencies_tests.rs
crates/application/src/tests/mocks/: mock_provider.rs  mock_repository.rs  mod.rs
crates/application/src/use_cases/: analyze_pair.rs  ingest_rates.rs  mod.rs  sync_currencies.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/indicators/: math.rs  mod.rs
crates/domain/src/indicators/quality/: calculate_rate_quality.rs  mod.rs  rate_quality.rs  rate_quality_config.rs
crates/domain/src/tests/: mod.rs  time_series_tests.rs
crates/domain/src/types/: currency.rs  currency_info.rs  currency_pair.rs  exchange_rate.rs  mod.rs  rate_quality.rs  rate_quality_config.rs  time_series.rs  utils.rs
crates/frontend/: Cargo.toml  Trunk.toml  index.html  style.css
crates/frontend/src/: api.rs  config.rs  main.rs  models.rs  state.rs  validation.rs
crates/frontend/src/components/: app.rs  form.rs  mod.rs  result_card.rs  status_banner.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/migrations/: 0001_exchange_rate.sql  0002_currencies.sql
crates/infrastructure/queries/: currencies_load.sql  currencies_save.sql  rates_exist.sql  rates_insert.sql  rates_load.sql
crates/infrastructure/src/: lib.rs  repository_error.rs
crates/infrastructure/src/currency/: mod.rs  model.rs  queries.rs  repository.rs
crates/infrastructure/src/exchange_rate/: error.rs  mod.rs  model.rs  repository.rs
crates/infrastructure/src/rate_provider/: dto.rs  frankfurter.rs
crates/infrastructure/src/repositories/: mod.rs
crates/infrastructure/src/repositories/exchange_rate/: error.rs  mod.rs  model.rs  queries.rs  repository.rs
crates/infrastructure/src/repositories/rate_provider/: dto.rs  frankfurter.rs  mod.rs
crates/infrastructure/src/tests/: currency_repository_tests.rs  exchange_rate_repository_tests.rs  mod.rs  rate_provider_frankfurter_tests.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: config.rs  main.rs  runner.rs  setup.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  lib.rs  tracing.rs
docker/: nginx.conf
