[workspace]
members = [
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
    "crates/api",
    "crates/ingestion",
    "crates/shared",
]

resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0"
chrono = "0"
rust_decimal = { version = "1", default-features = false, features = ["maths", "macros"] }
async-trait = "0"

[workspace.package]
version = "0.1.0"
edition = "2024"

# ============================================================================ #
# Workspace-wide lints — inherited by all crates via `lints.workspace = true`
# ============================================================================ #
[workspace.lints.rust]
# Safety
unsafe_code = "forbid"

# Correctness & robustness
missing_debug_implementations = "warn"
missing_docs = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
# Lint groups
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Pedantic overrides — too noisy for this project
module_name_repetitions = "allow"
must_use_candidate = "allow"

# Nursery overrides
future_not_send = "allow"
redundant_pub_crate = "allow"

# Correctness & safety
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"

# Style & clarity
clone_on_ref_ptr = "warn"
str_to_string = "warn"
string_to_string = "warn"
needless_pass_by_value = "warn"
implicit_clone = "warn"
semicolon_if_nothing_returned = "warn"
