[package]
name = "application"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
tokio.workspace = true
thiserror.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
async-trait.workspace = true
domain = { path = "../domain" }
shared = { path = "../shared" }
