[package]
name = "frontend"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
leptos = { version = "0", features = ["csr"] }
web-sys = { version = "0", features = ["HtmlInputElement", "HtmlSelectElement"] }
wasm-bindgen-futures = "0"
serde.workspace = true
serde_json = "1"
reqwest.workspace = true
console_error_panic_hook = "0"
