[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
tokio.workspace = true
chrono.workspace = true
async-trait.workspace = true
sqlx.workspace = true
rust_decimal.workspace = true
serde.workspace = true
reqwest.workspace = true
application = { path = "../application" }
domain = { path = "../domain" }

[dev-dependencies]
wiremock.workspace = true

[lints]
workspace = true
