[package]
name = "ingestion"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
tokio.workspace = true
dotenvy.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
domain = { path = "../domain" }
shared = { path = "../shared" }

[lints]
workspace = true
